<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_height="@dimen/actionBarSize"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical|start"
    android:background="@color/primary_color"
    android:gravity="center_vertical">

    <com.cliqz.browser.widget.SearchBar
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_height="30dp"
        tools:background="@color/fresh_tab_background"
        android:paddingLeft="@dimen/toolbar_padding"
        android:paddingRight="@dimen/toolbar_padding"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/reader_mode_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:srcCompat="@drawable/ic_reader_mode_off"
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:visibility="gone"
        tools:visibility="visible"/>

    <FrameLayout
        android:id="@+id/menu_overview"
        android:layout_width="@dimen/toolbar_menu_item_w"
        android:layout_height="@dimen/toolbar_menu_item_h"
        android:background="?attr/actionBarItemBackground">

        <com.cliqz.browser.widget.TabsCounter
            android:id="@+id/open_tabs_count"
            android:layout_width="@dimen/toolbar_menu_icon_w"
            android:layout_height="@dimen/toolbar_menu_icon_h"
            android:layout_gravity="center"
            app:color="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/overflow_menu"
        android:layout_width="@dimen/toolbar_menu_item_w"
        android:layout_height="@dimen/toolbar_menu_item_h"
        android:layout_marginEnd="@dimen/toolbar_padding"
        android:layout_marginRight="@dimen/toolbar_padding"
        android:background="?attr/actionBarItemBackground">

        <ImageView
            android:id="@+id/overflow_menu_icon"
            android:layout_width="@dimen/toolbar_menu_icon_w"
            android:layout_height="@dimen/toolbar_menu_icon_h"
            android:layout_gravity="center"
            android:tint="?android:attr/textColorPrimary"
            app:srcCompat="@drawable/ic_menu_overflow"
            tools:tint="@android:color/white" />
    </FrameLayout>


</LinearLayout>
